# ChangeLog for gentoo-src/stager
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.21 2003/10/13 00:14:41 zhen Exp $

  12 Oct 2003; zhen <zhen@gentoo.org> catalyst:
  removing dup enter_chroot

  12 Oct 2003; Robin H. Johnson <robbat2@gentoo.org> catalyst:
  document subarches checking

  12 Oct 2003; Robin H. Johnson <robbat2@gentoo.org> catalyst:
  Fix valid subarch test.

  12 Oct 2003; zhen <zhen@gentoo.org> catalyst, include/build_functions.sh,
  include/functions.sh:
  thanks to robbat2, the cmdline argument handling is now fixed. I moved
  start_build to build_functions.sh cleaning up the main catalyst script some
  more.

  11 Oct 2003; <zhen@gentoo.org> include/build_functions.sh:
  fixed SRCBALL and DESTBALL, making it transparent for profiles

  11 Oct 2003; <zhen@gentoo.org> catalyst, include/functions.sh:
  added an exit condition to the cmd line argument case statement

  09 Oct 2003; <zhen@gentoo.org> catalyst, bin/build.sh, bin/stage1,
  files/catalyst.conf, include/build_functions.sh, include/functions.sh:
  the changes that I made to the above files should make catalyst completely
  transparent to no matter what profile we are using. check files/catalyst.conf
  for the list of BUILDTYPEs that we support.

  08 Oct 2003; zhen <zhen@gentoo.org> catalyst:
  changed how cmd line arguments are handled

  08 Oct 2003; zhen <zhen@gentoo.org> catalyst:
  I changed the is_special handling so that it is cleaner and faster

  08 Oct 2003; zhen <zhen@gentoo.org> catalyst, include/functions.sh,
  livecd/foundations/x86-basic/base.pkg,
  livecd/foundations/x86-basic/kern.pkg,
  livecd/foundations/x86-basic/post-clean.sh,
  livecd/foundations/x86-basic/pre-clean.sh,
  livecd/foundations/x86-basic/settings:
  I outsourced more functions to include/functions.sh. I made it a seperate file
  from build_fucntions.sh so that we can keep our build and other functions