@@ -1,6 +1,9 @@
 # ChangeLog for gentoo-src/stager
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.21 2003/10/13 00:14:41 zhen Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.22 2003/10/13 01:18:03 zhen Exp $
+
+  12 Oct 2003; zhen <zhen@gentoo.org> include/build_functions.sh:
+  fixed the entry in include/build_functions.sh for location of bootstrap.sh
 
   12 Oct 2003; zhen <zhen@gentoo.org> catalyst:
   removing dup enter_chroot
